# esp-monitor

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/config/: CMakeLists.txt  cgi.c  cgi.h  config.c  config.h
components/display/: CMakeLists.txt  display.c  display.h
components/esp8266_wrapper/: esp8266_wrapper.h
components/mqtt/: mqtt.c  mqtt.h
components/mqtt-handler/: CMakeLists.txt  mqtt_handler.c  mqtt_handler.h
components/mqtt_client/: CMakeLists.txt  mqtt.c  mqtt.h
components/net_handler/: CMakeLists.txt  Kconfig  net_eth.c  net_handler.c  net_handler.h  net_wifi.c
components/sensor/: CMakeLists.txt  sensor.c  sensor.h
components/server_monitor_handler/: CMakeLists.txt  config.xml  index.html  server_monitor_handler.c
components/server_monitor_handler/Example_data_graph/test/: showXML.php  test.html  test.xml  test2.html  testread.html  testwrite.html  testwrite1.html  testwrite2.xml
components/server_monitor_handler/pages/: config.txt  index.html  log.html  sensor_data.html  style.css
components/sht3x/: CMakeLists.txt
components/web_pages/: CMakeLists.txt  log.html  sensor_data.html
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager_main.c
html/: 140medley.min.js  ansi_up.js  config.txt  index.tpl  log.html  log.tpl  moment.js  sensor_data.tpl  style.css
html/flash/: index.tpl
html/wifi/: wifi.tpl
libraries/d7s/: CMakeLists.txt  d7s.c  d7s.h
libraries/esp8266_wrapper/: CMakeLists.txt  esp8266_wrapper.c  esp8266_wrapper.h
main/: CMakeLists.txt  cgi.c  cgi.h  main.c
(+11 files in other folders)
